feat: reverter quitacoes e cancelar despesas
